--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "subbu",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.17.1",
     "body-parser": "^1.19.0",
     "nodemon": "^1.19.3"
   }
